[gd_scene load_steps=5 format=3 uid="uid://0bc1h21kne1j"]

[ext_resource type="Script" path="res://dev_tabs/notes/note_types/note_template.gd" id="1_pg8il"]
[ext_resource type="Texture2D" uid="uid://nydyn6wekrku" path="res://dev_tabs/assets/choose_color.png" id="2_lg3xa"]
[ext_resource type="Texture2D" uid="uid://bf5dn58v0wvf2" path="res://dev_tabs/assets/close.png" id="3_yy43i"]
[ext_resource type="Script" path="res://dev_tabs/notes/note_types/note_border.gd" id="4_oe2vb"]

[node name="note_border" type="Node2D"]
script = ExtResource("1_pg8il")

[node name="container" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 180.0
offset_bottom = 154.0

[node name="note_bg" type="ColorRect" parent="container"]
layout_mode = 0
offset_right = 284.0
offset_bottom = 245.0
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="container"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 191.0
offset_bottom = 155.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="note_bar" type="ColorRect" parent="container/VBoxContainer"]
custom_minimum_size = Vector2(0, 47)
layout_mode = 2
size_flags_vertical = 0
mouse_default_cursor_shape = 6
color = Color(0.54099, 0.54099, 0.54099, 1)

[node name="note_bar" type="HBoxContainer" parent="container/VBoxContainer/note_bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -6.0
offset_bottom = 1.89
grow_horizontal = 2
grow_vertical = 2

[node name="ColorPickerButton" type="ColorPickerButton" parent="container/VBoxContainer/note_bar/note_bar"]
custom_minimum_size = Vector2(0, -28.935)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
icon = ExtResource("2_lg3xa")

[node name="ColorRect" type="ColorRect" parent="container/VBoxContainer/note_bar/note_bar/ColorPickerButton"]
layout_mode = 0
offset_left = 2.0
offset_top = 3.0
offset_right = 38.0
offset_bottom = 38.0
color = Color(0.197937, 0.197937, 0.197937, 1)

[node name="TextureRect" type="TextureRect" parent="container/VBoxContainer/note_bar/note_bar/ColorPickerButton"]
layout_mode = 0
offset_left = 3.0
offset_top = 4.0
offset_right = 37.0
offset_bottom = 37.0
texture = ExtResource("2_lg3xa")

[node name="color_pick_btn" type="Button" parent="container/VBoxContainer/note_bar/note_bar"]
visible = false
layout_mode = 2
size_flags_horizontal = 10
icon = ExtResource("2_lg3xa")

[node name="close" type="Button" parent="container/VBoxContainer/note_bar/note_bar"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4
icon = ExtResource("3_yy43i")

[node name="note_content" type="ColorRect" parent="container/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
color = Color(0.226707, 0.226707, 0.226707, 1)
script = ExtResource("4_oe2vb")

[node name="hollow" type="Node" parent="container/VBoxContainer/note_content"]

[node name="connector" type="Control" parent="container"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="anchors" type="Control" parent="container/connector"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="left" type="ColorRect" parent="container/connector/anchors"]
layout_mode = 0
offset_left = -5.0
offset_right = 4.0
offset_bottom = 309.0
mouse_default_cursor_shape = 3

[node name="top" type="ColorRect" parent="container/connector/anchors"]
layout_mode = 0
offset_left = -5.0
offset_top = -4.0
offset_right = 375.0
offset_bottom = 4.0
mouse_default_cursor_shape = 3

[node name="down" type="ColorRect" parent="container/connector/anchors"]
layout_mode = 0
offset_left = -5.0
offset_top = 304.0
offset_right = 375.0
offset_bottom = 312.0

[node name="right" type="ColorRect" parent="container/connector/anchors"]
layout_mode = 0
offset_left = 366.0
offset_right = 375.0
offset_bottom = 309.0

[node name="anchor_collector" type="Node2D" parent="container/connector/anchors"]

[node name="connections" type="Node2D" parent="container/connector"]

[node name="input_output_tmp" type="Node2D" parent="container/connector"]

[node name="resizer" type="ColorRect" parent="container"]
layout_mode = 0
offset_left = 358.0
offset_top = 295.0
offset_right = 378.0
offset_bottom = 315.0
mouse_default_cursor_shape = 12
color = Color(1, 1, 1, 0)

[connection signal="gui_input" from="container/VBoxContainer/note_bar" to="." method="_on_note_bar_gui_input"]
[connection signal="mouse_entered" from="container/VBoxContainer/note_bar" to="." method="_on_note_bar_mouse_entered"]
[connection signal="mouse_exited" from="container/VBoxContainer/note_bar" to="." method="_on_note_bar_mouse_exited"]
[connection signal="color_changed" from="container/VBoxContainer/note_bar/note_bar/ColorPickerButton" to="." method="_on_color_picker_button_color_changed"]
[connection signal="mouse_entered" from="container/VBoxContainer/note_bar/note_bar/ColorPickerButton" to="." method="_on_color_picker_button_mouse_entered"]
[connection signal="mouse_exited" from="container/VBoxContainer/note_bar/note_bar/ColorPickerButton" to="." method="_on_color_picker_button_mouse_exited"]
[connection signal="popup_closed" from="container/VBoxContainer/note_bar/note_bar/ColorPickerButton" to="." method="_on_color_picker_button_popup_closed"]
[connection signal="pressed" from="container/VBoxContainer/note_bar/note_bar/ColorPickerButton" to="." method="_on_color_picker_button_pressed"]
[connection signal="pressed" from="container/VBoxContainer/note_bar/note_bar/color_pick_btn" to="." method="_on_color_pick_btn_pressed"]
[connection signal="mouse_entered" from="container/VBoxContainer/note_bar/note_bar/close" to="." method="_on_close_mouse_entered"]
[connection signal="mouse_exited" from="container/VBoxContainer/note_bar/note_bar/close" to="." method="_on_close_mouse_exited"]
[connection signal="pressed" from="container/VBoxContainer/note_bar/note_bar/close" to="." method="_on_button_pressed"]
[connection signal="gui_input" from="container/connector/anchors/left" to="." method="_on_left_gui_input"]
[connection signal="mouse_entered" from="container/connector/anchors/left" to="." method="_on_left_mouse_entered"]
[connection signal="mouse_exited" from="container/connector/anchors/left" to="." method="_on_left_mouse_exited"]
[connection signal="gui_input" from="container/connector/anchors/top" to="." method="_on_top_gui_input"]
[connection signal="mouse_entered" from="container/connector/anchors/top" to="." method="_on_top_mouse_entered"]
[connection signal="mouse_exited" from="container/connector/anchors/top" to="." method="_on_top_mouse_exited"]
[connection signal="gui_input" from="container/connector/anchors/down" to="." method="_on_down_gui_input"]
[connection signal="mouse_entered" from="container/connector/anchors/down" to="." method="_on_down_mouse_entered"]
[connection signal="mouse_exited" from="container/connector/anchors/down" to="." method="_on_down_mouse_exited"]
[connection signal="gui_input" from="container/connector/anchors/right" to="." method="_on_right_gui_input"]
[connection signal="mouse_entered" from="container/connector/anchors/right" to="." method="_on_right_mouse_entered"]
[connection signal="gui_input" from="container/resizer" to="." method="_on_resizer_gui_input"]
[connection signal="mouse_entered" from="container/resizer" to="." method="_on_resizer_mouse_entered"]
[connection signal="mouse_exited" from="container/resizer" to="." method="_on_resizer_mouse_exited"]
